:cat:   Cập nhật giao diện

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>Học Tốt Tiếng Anh</title>
+    <title>Cùng Học Tốt</title>
     <!-- built style files will be auto injected -->
 </head>
 
