--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Cùng Học Tốt</title>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']] },showProcessingMessages: false,showMathMenu: true,showMathMenuMSIE: false,messageStyle: "none", "HTML-CSS" : { webFont : "TeX",matchFontHeight: false, linebreaks: {automatic: true}}});
+    </script>
+    <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-MML-AM_HTMLorMML&locale=vi"></script>
     <!-- built style files will be auto injected -->
 </head>
 
